infrastructure/networking/cilium/network3.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-ingress-to-apps"
spec:
  endpointSelector:
    matchExpressions:
    - key: reserved:ingress
      operator: Exists
  egress:
  - toEntities:
    - cluster # Permite que el Ingress entregue el tráfico a cualquier pod del clúster
