infrastructure/networking/cilium/network4.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "allow-all-from-ingress"
spec:
  description: "Permite que cualquier pod del clúster reciba tráfico desde el Ingress de Cilium"
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: Exists # Selecciona TODOS los pods de todos los namespaces
  ingress:
  - fromEntities:
    - ingress # La identidad reservada para el Ingress Controller de Cilium
